# colorhug-client

./: Makefile.am  NEWS  README  RELEASE  autogen.sh  ch-client.c  ch-client.h  ch-common.h  ch-main.c  ch-self-test.c  configure.ac  setup-win32.nsi.in
.tx/: config
contrib/: ch-gusb.c  ch-hid.c  ch-libcolorhug.c  ch-usb.c  ch-usb1.c  colorhug-client.spec.in  colorhug.spec.in
data/: Makefile.am  ch-backlight-menus.ui  ch-backlight.ui  ch-ccmx-menus.ui  ch-ccmx.rc.in  ch-ccmx.ui  ch-flash-menus.ui  ch-flash.desktop.in  ch-flash.rc.in  ch-flash.ui  ch-main.rc.in  ch-refresh-menus.ui  ch-refresh.rc.in  ch-refresh.ui  ch-spectro-util.ui  ch-spectro.ui  ch-util.ui  colorhug-ccmx.appdata.xml.in  colorhug-ccmx.desktop.in  colorhug-cmd-completion.bash  colorhug-completion.bash  colorhug-docs.desktop.in  colorhug-flash.appdata.xml.in  colorhug-flash.desktop.in  colorhug-refresh.desktop.in  colorhug-spectro-util.desktop.in  com.hughski.ColorHug.Backlight.desktop.in  com.hughski.ColorHug.CcmxLoader.appdata.xml.in  com.hughski.ColorHug.CcmxLoader.desktop.in  com.hughski.ColorHug.DisplayAnalysis.appdata.xml.in  com.hughski.ColorHug.DisplayAnalysis.desktop.in  com.hughski.ColorHug.FlashLoader.appdata.xml.in  com.hughski.ColorHug.FlashLoader.desktop.in  com.hughski.ColorHug.Spectro.desktop.in  com.hughski.colorhug-client.gschema.xml  com.hughski.colorhug-client.gschema.xml.in
data/appdata/: Makefile.am  com.hughski.ColorHug.Backlight.appdata.xml.in  com.hughski.ColorHug.CcmxLoader.appdata.xml.in  com.hughski.ColorHug.DisplayAnalysis.appdata.xml.in  com.hughski.ColorHug.FlashLoader.appdata.xml.in  com.hughski.ColorHug.Spectro.appdata.xml.in
data/bash/: Makefile.am  colorhug-cmd
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/scalable/: Makefile.am
data/tests/: Makefile.am  eco-off.ccss  eco1.ccss  eco2.ccss  lenovo.ccss
help/: Makefile.am
help/C/: acronyms.page  getting-started.page  gnome-help.its  index.page  load-ccmx.page  problems.page  update-firmware.page
libcolorhug/: Makefile.am  ch-common.c  ch-common.h  ch-device-queue.c  ch-device-queue.h  ch-device.c  ch-device.h  ch-self-test.c  colorhug.h  colorhug.pc.in
man/: Makefile.am  colorhug-backlight.sgml  colorhug-ccmx.sgml  colorhug-cmd.sgml  colorhug-flash.sgml  colorhug-refresh.sgml
po/: .gitignore  POTFILES.in  cs.po  cs_CZ.po  da.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  en_US.po  es.po  es_ES.po  et.po  fa.po  fi.po  fr.po  fr_FR.po  hu.po  it.po  it_IT.po  ja.po  ja_JP.po  lv.po  nb.po  nl.po  nl_NL.po  nn.po  pl.po  pl_PL.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  (+1 more)
src/: Makefile.am  ch-ambient.c  ch-ambient.h  ch-backlight.c  ch-ccmx.c  ch-client.c  ch-client.h  ch-common.c  ch-common.h  ch-device-queue.c  ch-device-queue.h  ch-flash-md.c  ch-flash-md.h  ch-flash.c  ch-graph-widget.c  ch-graph-widget.h  ch-inhx32-to-bin.c  ch-main.c  ch-markdown.c  ch-math.c  ch-math.h  ch-point-obj.c  ch-point-obj.h  ch-profile.c  ch-refresh-utils.c  ch-refresh-utils.h  ch-refresh.c  ch-self-test.c  ch-spectro-util.c  ch-spectro.c  ch-util.c  ch-util.ui  colorhug-backlight.gresource.xml  colorhug-ccmx.gresource.xml  colorhug-flash.gresource.xml  colorhug-refresh.gresource.xml  colorhug-spectro.gresource.xml  egg-graph-point.c  egg-graph-point.h  egg-graph-widget.c  (+1 more)
