@YELP_HELP_RULES@

EXTRA_DIST = C/gnome-help.its

HELP_ID = colorhug-client

HELP_LINGUAS =

HELP_MEDIA =								\
	colorhug1.jpg							\
	colorhug-ccmx.png						\
	colorhug-flash.png

HELP_FILES =								\
	legal.xml							\
	acronyms.page							\
	getting-started.page						\
	index.page							\
	load-ccmx.page							\
	problems.page							\
	update-firmware.page

-include $(top_srcdir)/git.mk
