themedir = $(datadir)/icons/hicolor
size = scalable
context = apps

iconsdir = $(themedir)/$(size)/$(context)
icons_DATA = 		 		\
	colorhug.svg

appiconsdir = $(datadir)/colorhug-client/icons
appicons_DATA = 	 		\
	usb.svg	  			\
	colorhug-gray.svg

EXTRA_DIST =				\
	$(icons_DATA)			\
	$(appicons_DATA)

-include $(top_srcdir)/git.mk
